added slack link
Signed-off-by: Zeeshan Rafique <zeeshanrafique23@gmail.com>

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<li><a href="https://facebook.com/openintern" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://linkedin.com/company/openintern" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/openintern" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<!-- <li><a href="#" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li> -->
+								<li><a href="https://join.slack.com/t/openinternworkspace/shared_invite/zt-1a4csrsf6-2v66sVXk2RwLlmOFfLzmnw" target="_blank" class="icon brands fa-slack"><span class="label">Join Slack</span></a></li>
 							</ul>
 						</nav>
 					</header>
